tests/NormalTests/paczka1/small_fuzzy/42649786.err
Error in line 7: aO61SGA4Jc A572 31,7
Error in line 6: Yb5mHqZT A641 88,9
